--- a/Rand_MyData.ipynb
+++ b/Rand_MyData.ipynb
@@ -19,7 +19,7 @@
    "id": "e5d41419-5f5c-421e-8fd5-bd614e5ca832",
    "metadata": {},
    "source": [
-    "## Рандомизация данных из коммерческого источника Google Sheets"
+    "## Загрузка данных из Google Sheets в GitHub"
    ]
   },
   {
@@ -32,10 +32,8 @@
     "import gspread\n",
     "from oauth2client.service_account import ServiceAccountCredentials\n",
     "import pandas as pd\n",
-    "import random\n",
-    "import string\n",
     "import os\n",
-    "import json  # Добавьте эту строку в начале файла\n"
+    "import json"
    ]
   },
   {
@@ -67,87 +65,49 @@
    "source": [
     "# Чтение данных\n",
     "data = sheet.get_all_records()\n",
-    "df = pd.DataFrame(data)\n"
+    "df = pd.DataFrame(data)\n",
+    "# Сохранение данных в CSV\n",
+    "df.to_csv('products_data.csv', index=False, encoding='utf-8')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d5ff9b9f-ebcf-40e5-a59b-a1dfe1ef195b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'spreadsheetId': '1draL0IcMP94h3YChWrHMxfI0AG3gTBgNoXO3lqj0jKE',\n",
-       " 'updatedRange': \"'product info'!A1:K320\",\n",
-       " 'updatedRows': 320,\n",
-       " 'updatedColumns': 11,\n",
-       " 'updatedCells': 3520}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Функции для рандомизации\n",
-    "def random_string(length=8):\n",
-    "    return ''.join(random.choices(string.ascii_uppercase + string.digits, k=length))\n",
-    "\n",
-    "def random_number(length=8):\n",
-    "    return ''.join(random.choices(string.digits, k=length))\n",
-    "\n",
-    "# Рандомизация нужных колонок\n",
-    "df['Offer ID'] = df['Offer ID'].apply(lambda x: random_string())\n",
-    "df['SKU'] = df['SKU'].apply(lambda x: random_string())\n",
-    "df['Product ID'] = df['Product ID'].apply(lambda x: random_number())\n",
-    "df['Штрихкоды'] = df['Штрихкоды'].apply(lambda x: random_number(13))\n",
-    "df['Название'] = df['Название'].apply(lambda x: f\"Product_{random_string(6)}\")\n",
-    "\n",
-    "# Обновление данных в Google Sheets\n",
-    "sheet.update([df.columns.values.tolist()] + df.values.tolist())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
    "id": "4c9aa50c-9f71-4b60-a7c0-d4804888014c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from github import Github\n",
-    "from github import GithubException\n"
+    "from github import GithubException"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "28ab9d3e-b34f-4085-8dd3-e7c40d8acd1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Чтение токена из файла\n",
     "with open(r\"D:\\PycharmProjects\\config.ini\\.env.github\", 'r', encoding='utf-8') as f:\n",
-    "    github_token = f.read().strip()\n"
+    "    github_token = f.read().strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "78f6fe47-ffcd-4c99-8621-fddbae88697f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Подключение к GitHub\n",
     "g = Github(github_token)\n",
-    "user = g.get_user()  # Получаем текущего пользователя\n"
+    "user = g.get_user()  # Получаем текущего пользователя"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "630fccbe-f4bf-4a9e-a5a1-c541be2ca5c8",
    "metadata": {},
    "outputs": [
@@ -180,12 +140,12 @@
     "        )\n",
     "        print(f\"Репозиторий успешно создан: {repo.html_url}\")\n",
     "    else:\n",
-    "        raise e  # Если ошибка не 404 — пробрасываем дальше\n"
+    "        raise e  # Если ошибка не 404 — пробрасываем дальше"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "b2a7b8d8-8fc7-40a4-9fa3-b03719e73994",
    "metadata": {},
    "outputs": [
@@ -199,8 +159,8 @@
    ],
    "source": [
     "# Загрузка файла в репозиторий\n",
-    "file_path = \"competitive_analysis/randomized_products.csv\"\n",
-    "commit_message = \"Add randomized product data\"\n",
+    "file_path = \"products_data.csv\"\n",
+    "commit_message = \"Add product data from Google Sheets\"\n",
     "\n",
     "try:\n",
     "    # Проверяем, существует ли уже файл\n",
@@ -209,7 +169,7 @@
     "except GithubException as e:\n",
     "    if e.status == 404:\n",
     "        # Если файла нет — создаём его\n",
-    "        with open('randomized_products.csv', 'r', encoding='utf-8') as file:\n",
+    "        with open('products_data.csv', 'r', encoding='utf-8') as file:\n",
     "            content = file.read()\n",
     "        \n",
     "        repo.create_file(\n",
